Build Works! >>> Hello, from ARPAAMS!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,27 @@
 cmake_minimum_required(VERSION 3.14)
-project(ARPAAMS VERSION 0.1.0 LANGUAGES C CXX)
+
+project(ARPAAMS 
+    VERSION 0.1.0
+    DESCRIPTION "ARPAAMS Project"
+    LANGUAGES C CXX
+)
 
 set(CMAKE_CXX_STANDARD 17)
-#Define source and include directories
+
+# Define source and include directories
 set(SOURCE_DIR src)
 set(INCLUDE_DIR _include)
 
-# Add include directory so the compiler can find header files
-target_include_directories(ARPAAMS PRIVATE${CMAKE_CURRENT_SOURCE_DIR}/ ${INCLUDE_DIR})
-# Add source files
-add_executable(ARPAAMS ${SOURCE_DIR}/main.cpp)
+# Add source files FIRST (creates the target)
+add_executable(ARPAAMS
+    ${SOURCE_DIR}/main.cpp
+    ${SOURCE_DIR}/BeamformingStrategy.cpp
+)
+
+# Now add include directories to the target
+target_include_directories(ARPAAMS PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/${INCLUDE_DIR}
+)
 
 # Optional CTest and CPack
 include(CTest)
