Populate .clang-tidy and .clang-format for (Static Analysis Tools), this requires adding two lines to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Run tests
         run: ctest --preset test --output-on-failure
+
+      - name: Run static analysis
+        run: clang-tidy src/*.cpp -- -I_include
