--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,76 +1,1 @@
-name: CI - Build & Release
-
-on:
-  push:
-    branches: [ main, master ]
-  workflow_dispatch:
-  release:
-    types: [created]
-
-jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        build_type: [Debug, Release]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup CMake
-        uses: jwlawson/actions-setup-cmake@v1
-        with:
-          cmake-version: '3.24.0'
-
-      - name: Install Ninja (Linux/Mac)
-        if: runner.os != 'Windows'
-        run: sudo apt-get update && sudo apt-get install -y ninja-build || true
-
-      - name: Configure
-        run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-
-      - name: Run clang-tidy (optional - Linux & Mac)
-        if: runner.os != 'Windows'
-        run: |
-          if command -v clang-tidy >/dev/null 2>&1; then
-            clang-tidy src/*.cpp -- -I_include || true
-          else
-            echo "clang-tidy not installed"
-          fi
-
-      - name: Build
-        run: cmake --build build --config ${{ matrix.build_type }} -- -j
-
-      - name: Run tests
-        run: ctest --test-dir build --output-on-failure || true
-
-      - name: Package artifacts
-        run: |
-          mkdir -p artifacts
-          cp -r build/* artifacts/ || true
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ARPAAMS-${{ matrix.os }}-${{ matrix.build_type }}
-          path: artifacts
-
-  create-release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.event_name == 'release' || github.ref == 'refs/heads/main'
-    steps:
-      - name: Download build artifacts (example)
-        uses: actions/download-artifact@v4
-        with:
-          name: ARPAAMS-ubuntu-latest-Release
-          path: artifacts || true
-
-      - name: Create GitHub Release (if triggered by workflow_dispatch or release event)
-        uses: softprops/action-gh-release@v1
-        with:
-          name: "ARPAAMS ${{ github.ref_name }}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+﻿# (paste release YAML content)
