--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,22 +2,35 @@ name: CodeQL
 
 on:
   push:
+    branches: [ main, master ]
   pull_request:
+    branches: [ main, master ]
   schedule:
     - cron: '0 0 * * 0'
 
 jobs:
   analyze:
+    name: Analyze (CodeQL)
     runs-on: ubuntu-latest
     permissions:
-      security-events: write
       actions: read
       contents: read
+      security-events: write
 
     steps:
       - uses: actions/checkout@v4
-      - uses: github/codeql-action/init@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
         with:
           languages: cpp
 
-      - uses: github/codeql-action/analyze@v4
+      - name: Build
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ninja-build cmake
+          cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=17
+          cmake --build build --config Release -- -j
+
+      - name: Run CodeQL analysis
+        uses: github/codeql-action/analyze@v3
