--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,12 @@
-name: CI - Build & Release
+﻿name: CI - Build & Release
 
 on:
   push:
-    branches: [ main, master ]
-  workflow_dispatch:
+    tags:
+      - 'v*'        # release tags like v1.0.0
   release:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        build_type: [Debug, Release]
+        build_type: [Release]
 
     steps:
       - name: Checkout
@@ -24,53 +25,50 @@ jobs:
         with:
           cmake-version: '3.24.0'
 
-      - name: Install Ninja (Linux/Mac)
-        if: runner.os != 'Windows'
-        run: sudo apt-get update && sudo apt-get install -y ninja-build || true
+      - name: Install tools (Linux)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y ninja-build
 
       - name: Configure
-        run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-
-      - name: Run clang-tidy (optional - Linux & Mac)
-        if: runner.os != 'Windows'
-        run: |
-          if command -v clang-tidy >/dev/null 2>&1; then
-            clang-tidy src/*.cpp -- -I_include || true
-          else
-            echo "clang-tidy not installed"
-          fi
+        run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_STANDARD=17
 
       - name: Build
         run: cmake --build build --config ${{ matrix.build_type }} -- -j
 
-      - name: Run tests
-        run: ctest --test-dir build --output-on-failure || true
+      - name: Run tests (best effort)
+        run: |
+          if [ -f build/CTestTestfile.cmake ]; then
+            ctest --test-dir build --output-on-failure || true
+          else
+            echo "No tests configured"
+          fi
 
-      - name: Package artifacts
+      - name: Create zip artifact
         run: |
           mkdir -p artifacts
-          cp -r build/* artifacts/ || true
+          tar -czf artifacts/${{ matrix.os }}-${{ matrix.build_type }}.tar.gz -C build .
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ARPAAMS-${{ matrix.os }}-${{ matrix.build_type }}
-          path: artifacts
+          path: artifacts/${{ matrix.os }}-${{ matrix.build_type }}.tar.gz
 
   create-release:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' || github.ref == 'refs/heads/main'
+    if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/')
     steps:
-      - name: Download build artifacts (example)
+      - name: Download artifacts (example Linux Release)
         uses: actions/download-artifact@v4
         with:
           name: ARPAAMS-ubuntu-latest-Release
           path: artifacts || true
 
-      - name: Create GitHub Release (if triggered by workflow_dispatch or release event)
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           name: "ARPAAMS ${{ github.ref_name }}"
+          tag_name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
