--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,19 +19,34 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup CMake
-        uses: jwlawson/actions-setup-cmake@v1
-        with:
-          cmake-version: '3.24.0'
+      # ----------------------
+      # Install Ninja per OS
+      # ----------------------
+      - name: Install Ninja (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ninja-build
 
-      - name: Install Ninja (Linux/Mac)
-        if: runner.os != 'Windows'
-        run: sudo apt-get update && sudo apt-get install -y ninja-build
+      - name: Install Ninja (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install ninja || true
 
+      - name: Install Ninja (Windows)
+        if: runner.os == 'Windows'
+        run: choco install ninja --no-progress -y
+
+      # ----------------------
+      # Configure
+      # ----------------------
       - name: Configure
         run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
 
-      - name: Run clang-tidy (optional - Linux & Mac)
+      # ----------------------
+      # Optional clang-tidy on Linux/macOS
+      # ----------------------
+      - name: Run clang-tidy
         if: runner.os != 'Windows'
         run: |
           if command -v clang-tidy >/dev/null 2>&1; then
@@ -40,12 +55,21 @@ jobs:
             echo "clang-tidy not installed"
           fi
 
+      # ----------------------
+      # Build
+      # ----------------------
       - name: Build
         run: cmake --build build --config ${{ matrix.build_type }}
 
+      # ----------------------
+      # Test
+      # ----------------------
       - name: Run tests
         run: ctest --test-dir build --output-on-failure || true
 
+      # ----------------------
+      # Package
+      # ----------------------
       - name: Package artifacts
         run: |
           mkdir -p artifacts
@@ -61,8 +85,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'release' || github.ref == 'refs/heads/main'
+
     steps:
-      - name: Download build artifacts
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: ARPAAMS-ubuntu-latest-Release
